--- a/style.css
+++ b/style.css
@@ -413,3 +413,32 @@ section {
     animation: glow 2s ease-in-out infinite;
 }
 
+/*Efeito para tooltip */
+.hobby-item {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip-text {
+    visibility: hidden;
+    width: max-content;
+    background-color: rgba(0,0,0,0.8);
+    color: #fff;
+    text-align: center;
+    padding: 6px 10px;
+    border-radius: 6px;
+    position: absolute;
+    bottom: 110%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 14px;
+    z-index: 999;
+    opacity: 0;
+    transition: opacity 0.3s;
+    white-space: pre-line; /* Mantém quebras com <br> */
+}
+
+.hobby-item:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
